--- a/css/main.css
+++ b/css/main.css
@@ -721,7 +721,7 @@ h6 {
 }
 
 .about-me .about-info p {
-    color: #9b9a9c;
+    color: #ffffff;
     line-height: 1.8;
     font-weight: 400;
     margin-bottom: 30px;
@@ -1063,7 +1063,7 @@ h6 {
 }
 
 .resume .timeline ul li .timeline-content p {
-    color: #9b9a9c;
+    color: #ffffff;
     font-size: 14px;
     line-height: 1.8;
     font-weight: 400;
@@ -1664,6 +1664,12 @@ h6 {
 .scroll-top.active {
     bottom: 30px;
     right: 30px;
+}
+
+#portfolio .img-responsive {
+    width: 100%;
+    /* max-height: 190px; */
+    height: 270px;
 }
 
 /* --------------------------------------
