--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,10 @@ h6 {
   display: none;
 }
 
+.mt-0, .my-0 {
+  margin-top: 0rem!important;
+}
+
 .mt-3, .my-3 {
   margin-top: 1rem!important;
 }
@@ -1323,6 +1327,7 @@ h6 {
   background: #36353b;
   text-align: center;
   overflow: hidden;
+  height: 360px;
 }
 
 .testimonials .testimonial-box .client-pic img {
@@ -1696,7 +1701,7 @@ h6 {
 #portfolio .img-responsive {
   width: 100%;
   /* max-height: 190px; */
-  height: 300px;
+  /* height: 300px; */
 }
 
 /* --------------------------------------
